confirm dialog before reset

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,9 @@
     <string name="start">Start</string>
     <string name="stop">Stop</string>
     <string name="reset">Reset</string>
+    <string name="reset_confirm_dialog_title">Reset</string>
+    <string name="reset_confirm_dialog_text">Do you really want to finish current workflow?</string>
+    <string name="cancel">Cancel</string>
     <string name="work">Work</string>
     <string name="rest">Rest</string>
     <string name="text_to_speech_error">Text to speech engine failed to initialize</string>
