--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,7 @@
     <string name="reset">Reset</string>
     <string name="reset_confirm_dialog_title">Reset</string>
     <string name="reset_confirm_dialog_text">Do you really want to finish current workflow?</string>
+    <string name="ok">OK</string>
     <string name="cancel">Cancel</string>
     <string name="work">Work</string>
     <string name="rest">Rest</string>
@@ -13,4 +14,7 @@
     <string name="sound_5min">5 min</string>
     <string name="sound_muted">Muted</string>
     <string name="history_item_text">%1$s - %2$d minutes</string>
+    <string name="minutes">%1$d minutes</string>
+    <string name="skip_notifications_button">Skip</string>
+    <string name="skip_notifications_dialog_title">Skip notifications for:</string>
 </resources>
